<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list" />

    <Button
        android:id="@+id/button_favorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorites" />

    <Button
        android:id="@+id/button_historic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/historic" />

    <Button
        android:id="@+id/button_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info" />

</LinearLayout>
