<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_sites"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        card_view:cardBackgroundColor="@color/cardview_light_background"
        card_view:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/title_sites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_sites"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/name_sites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_sites"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="5sp"
                android:text="@string/name_sites" />

            <TextView
                android:id="@+id/url_sites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/title_sites"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="5sp"
                android:layout_toRightOf="@+id/name_sites"
                android:textSize="16sp"
                android:text="@string/url_sites" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_version"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        card_view:cardBackgroundColor="@color/cardview_light_background"
        card_view:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/title_versao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/title_versao" />

            <TextView
                android:id="@+id/number_versao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="5sp"
                android:textSize="16sp"
                android:layout_toRightOf="@+id/title_versao"
                android:text="@string/number_versao" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_dev"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        card_view:cardBackgroundColor="@color/cardview_light_background"
        card_view:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/title_dev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/title_dev" />

            <TextView
                android:id="@+id/name_dev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="5sp"
                android:layout_toRightOf="@+id/title_dev"
                android:textSize="16sp"
                android:text="@string/name_dev" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

</LinearLayout>